# plott

./: .dockerignore  .env.example  .gitignore  Anchor.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  clippy.toml  docker-compose.yml  drizzle.config.ts  eslint.config.js  package-lock.json  package.json  rustfmt.toml  tsconfig.json  vitest.config.ts
.github/: FUNDING.yml
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs
docs/: api-reference.md  architecture.md  patterns.md
libs/stalkr_math/: Cargo.toml
libs/stalkr_math/src/: lib.rs
programs/stalkr_core/: Cargo.toml
programs/stalkr_core/src/: contexts.rs  errors.rs  lib.rs  state.rs
sdk/: jest.config.js  package.json  tsconfig.json
sdk/src/: client.test.ts  client.ts  index.ts  types.ts
src/: index.ts
src/db/: README.md  client.ts  health.ts  migrations.ts  queries.ts  retry.ts  schema.ts  seed.ts
src/middleware/: README.md  auth.ts  cors.ts  index.ts  rate-limit.ts  request-id.ts  timing.ts
src/routes/: README.md  agents.ts  dashboard.ts  health.ts  pipelines.ts
src/services/: README.md  agent-registry.ts  monitor.ts  pipeline-engine.ts
src/types/: README.md  agent.ts  env.ts  index.ts  pipeline.ts
src/utils/: README.md  config.ts  constants.ts  errors.ts  events.ts  logger.ts  response.ts  shutdown.ts  validation.ts
tests/: README.md  agents.test.ts  events.test.ts  health.test.ts  pipelines.test.ts  rate-limit.test.ts  root.test.ts  setup.ts  validation.test.ts
