[workspace]
members = [
    "programs/stalkr_core",
    "libs/stalkr_math",
    "cli",
]
resolver = "2"

[workspace.package]
version = "0.4.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/stalkr-labs/stalkr"
# add program id constants [1.4]
# extract pattern weights into constants [2.4]
# add prediction confidence threshold filter [2.19]
# add prediction history query builder [3.4]
# add watchlist management commands [4.4]
# add exponential weighted moving average [5.4]
