[package]
name = "stalkr-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "stalkr-cli"
path = "src/main.rs"

[dependencies]
stalkr-math = { path = "../libs/stalkr_math" }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
# minor cleanup in sdk client [7.20]
